Fixed images and alignment
Alignment and text image fixed for news and about section

--- a/css/news.css
+++ b/css/news.css
@@ -21,10 +21,17 @@ h2 {
 .date1 {
 	padding-left: 1em;
 	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .french-toast-para {
 	padding-left: 1em;
 	max-width: 73em;
 	text-align: center;
+}
+
+.half-image-text {
+padding-left:5%;
+padding-right: 5%;
 }
